Fix z-index

--- a/src/components/clock/clock.styl
+++ b/src/components/clock/clock.styl
@@ -5,4 +5,3 @@
   position absolute
   top 43%
   left 47%
-  z-index -1
